Remove Entity::setSet and update some variablenames
Basic_Action
	- end() very minor change in logging output
Basic_Entity
	- save() now returns a boolean instead of integer
	- setSet() removed (unused)
Basic_EntitySet
	- removed setSet call
	- updated variable
Basic_Log
	- getTimers() minor changes in output'
Basic_Template
	- no longer using ifsetor, it will always resolve the second argument and thus be much heavier
Basic_Userinput
	- _getFormData() no longer modifies source.key for valueType=array, moved to tpls

*.html - added handling of valueType=array to source.key

--- a/templates/Userinput/Type/checkbox.html
+++ b/templates/Userinput/Type/checkbox.html
@@ -6,6 +6,6 @@
 		{=$isSelected}{@in_array}{value}{,}{input.rawValue}{/}{/}
 	{/}
 
-	<input class="{?input.required}required {/}{input.state}" type="{input.inputType}" name="{input.source.key}" id="{input.source.key}_{value}" value="{value}"{?value==input.rawValue || isSelected} checked="checked"{/}{html} />
+	<input class="{?input.required}required {/}{input.state}" type="{input.inputType}" name="{input.source.key}{?input.valueType=="array"}[]{/}" id="{input.source.key}_{value}" value="{value}"{?value==input.rawValue || isSelected} checked="checked"{/}{html} />
 	<label for="{input.source.key}_{value}">{description}</label>
 {rd/}
