exampleApplication 	- now contains all example files Basic 	- debug(); improved HTML output 	- resolvePath(); fixed a bug, absolute paths would lose their leading / Basic_Config 	- added Basic::$log calls 	- replaced getModificationTime by direct property access 	- _parse(); 2 bugfixes in number detection, added missing 6, plus strcspn would return 0 for 1a1 incorrectly Basic_Controller 	- _initMultiview(); bugfix when path is empty Basic_Database 	- removed config copying, now directly reading data 	- query(); forced $params to be an array Basic_Entity 	- ids are no longer numeric only, and 0 is no longer a new entity (null now is) 	- _load(); now casting integer values to ints 	- save(); now does strict checking again as numerics are now cast Basic_EntitySet 	- implemented $quick parameter, allow user to choose between complete and quick count Basic_Exception 	- autoCreate(); now possibly uses APPLICATION_Exception as top-most exception (allow overloading of Basic Exceptions as well, eg translating) 	- __toString(); cleaned up, properly formatted try/catch blocks plus reduced depth Basic_Template 	- localized pcre.backtrack_limit setting 	- implemented _method calling on objects 	- show(); bugfix, added try/catch for $log->end call Basic_Userinput 	- moved source-action defaulting from run() to __set, so later calls also have this logic 	- _getFormData(); now using inputType to determine wether or not to show an input (more configurable) 	- next(); bugfix, shouldn't return anything Basic_UserinputValue 	- add defaullt inputType only when superglobal is GET/POST (from Userinput::_getFormData)

--- a/templates/Userinput/Type/file.html
+++ b/templates/Userinput/Type/file.html
@@ -2,7 +2,7 @@
 
 {?input.rawValue}
 	{!-- all files are images --}
-	<img src="data/userImages/{input.rawValue}" id="current-{input.source.key}" class="user-image" />
+	<img src="data/userImages/{input.rawValue}" id="current-{input.source.key}" class="user-upload" />
 {/}
 
 <input class="{?input.required}required {/}{input.state}" type="{input.inputType}" name="{input.source.key}" id="{input.source.key}"{html} />
