Basic - only send text/plain header if we have no Basic::$action yet Basic_Entity 	- allow create() without parameters 	- InvalidDataException now shows gettype in message 	- save now returns false if nothing changed, true otherwise 	- DELETE query without newlines Basic_EntitySet 	- introduced getUnique with caching functionality exception.html - call getMessage instead of using property directly

--- a/templates/exception.html
+++ b/templates/exception.html
@@ -1,6 +1,6 @@
 <div id="exception">
 	<h1>{exception.name}</h1>
-	<h5>{exception.message}</h5>
+	<h5>{@exception.getMessage}{/}</h5>
 
 	{?exception.trace}
 		<pre>{exception.trace}</pre>
