rewrote tpl-parser, some add. changes in Entity
Basic
	- loadCached is now protected
	- removed useless isFile check in RecursiveDirectoryIterator
Basic_Entity
	- no longer implements ArrayAccess
	- rewrote constructor, merge logic for less code
	- get() now throws Exception when no row is found
Basic_EntitySet
	- no longer implements ArrayAccess
	- allow ORDER also with GroupBy
Basic_Exception
	- toString cleanup, header&footer are now always available
	- removed exceptionMailer
Basic_Log
	- removed unused getGraph
Basic_Memcache
	- switch if/else, first handle 'normal' situation then exception
Basic_Template
	- complete rewrite, syntax is less strict now and less
	  manipulation is done
Basic_UserinputValue
	- removed toString
templates/*
	- added head&footer, rewrote exception to new tpl syntax

--- a/templates/exception.html
+++ b/templates/exception.html
@@ -1,16 +1,16 @@
 <div id="exception">
-	<h1>{exception.name}</h1>
-	<h5>{@exception.getMessage}{/}</h5>
+	<h1>{exception->name}</h1>
+	<h5>{exception->getMessage()}</h5>
 
-	{?exception.trace}
-		<pre>{exception.trace}</pre>
+	{if ($this->exception->trace)}
+		<pre>{exception->trace}</pre>
 	{/}
 
-	{?exception.cause}
+	{if ($this->exception->cause)}
 		<hr />
 		<h4>Caused by:</h4>
 
-		{=$exception}{exception.cause}{/}
-		{#exception}
+		{$this->exception = $this->exception->cause;}
+		{$this->showTemplate('exception');}
 	{/}
 </div>
