moved some methods around, general cleanup, UserinputValue rewrite
Basic
	- load & checkEnv are now protected
	- now creating ::$db ourselves
Basic_Action
	- removed templateName in favor of run() overload
	- removed empty constructor
	- now includes _handleLastModified (from Controller)
	- replaced header() with http_response_code()
	- removed debug(), templates no longer call methods on Action by
	  default
Basic_Controller
	- remove case-check for action in favor of regexp@config.ini
	- replaced header() with http_response_code()
Basic_Entity
	- __construct no longer supports $id parameter (use ::get instead)
	- make ::get responsible for _cache, dont update from _construct
	- introduces local variable for method called 5x
	- moved is_scalar($id) from _construct to get::
	- bugfix; support save() with relation = null
Basic_EntitySet
	- update fetchCount only when iterator has completed
Basic_Exception
	- assume APPLICATION_NAME is always set in config
	- assign tpl-var to $template, not $action
	- remove try/catch around end() and show('footer')
Basic_Template
	- bugfix; don't include newline in subpattern for subpattern
	  or an if-statement on the very first line won't work
	- special variables dont need -> postfix (eg $userinput['x'])
	- $this is no longer an alias for $action, we like local vars
	- introduce __get proxy for $action as alternative for ^
	- cleanup more strict, only remove \t, not \spaces
Basic_Userinput
	- formMethod variable is deprecated
	- use proper const for Template::
Basic_UserinputValue
	- rewritten; $config is now $this
	- processConfig replaced by __set validation, defaults are in
	  defined class properties
	- 'Row.html' should now be called 'Wrapper.html'
	- _validate is more generic, now supports validating all $values
	- replaced foreach-foreach ($values) with RecursiveArrayIterator
	- callback is no longer supported
templates/* updated for new syntax & UserinputValue

--- a/templates/Userinput/Form.html
+++ b/templates/Userinput/Form.html
@@ -1,13 +1,9 @@
-<div id="main">
-	<div id="form">
-		<form method="{formMethod}" action="{formAction}" id="userinput"{?formContainsFile} enctype="multipart/form-data"{/}{?hasBeenSubmitted} class="submit-attempted"{/}>
-			<fieldset>
-				{*userinput:$input}
-					{@input.getHtml}{/}
-				{/}
+<form method="post" action="{formAction}" id="userinput"{if ($this->formContainsFile)} enctype="multipart/form-data"{/}{if ($this->hasBeenSubmitted)} class="submit-attempted"{/}>
+	<fieldset>
+		{foreach ($userinput as $this->input)}
+			{input->getHtml()}
+		{/}
 
-				<input type="submit" value="{userinputSubmit}" />
-			</fieldset>
-		</form>
-	</div>
-</div>
+		<input type="submit" value="{formSubmit}" />
+	</fieldset>
+</form>
