--- a/templates/Userinput/Type/text.html
+++ b/templates/Userinput/Type/text.html
@@ -1,3 +1,30 @@
-{#/Userinput/validate}
+{unset($this->validate);}
 
-<input class="{?input.required}required {/}{input.state}" type="{input.inputType}" name="{input.source.key}{?input.valueType=="array"}[]{/}" id="{input.source.key}"{?input.options.maxlength} size="{input.maxlength}" maxlength="{input.options.maxlength}"{/}{?input.rawValue} value="{input.rawValue}"{/}{html} />
+{if (!isset($this->input->regexp))}
+	{if (isset($this->input->options->minLength))}
+		{$this->len = chr(123). $this->input->options->minLength;}
+	{:}
+		{$this->len = chr(123). '1,';}
+	{/}
+
+	{$this->len .= $this->input->options->maxLength .chr(125);}
+
+	{if ($this->input->valueType == "string")}
+		{$this->validate = '~^.'. $this->len .'$~m';}
+	{/}
+	{if ($this->input->valueType == "numeric")}
+		{$this->validate = '~^\d'. $this->len .'$~';}
+	{/}
+{:}
+	{$this->validate = $this->input->regexp;}
+{/}
+
+<input
+	 class="{if ($this->input->required)}required {/}{state}"
+	 type="{input->inputType}"
+	 name="{input->source['key']}{if ("array" == $this->input->valueType)}[]{/}"
+	 id="{input->source['key']}"
+	{if ($this->input->options->maxlength)} size="{input->options->maxLength}" maxlength="{input->options->maxlength}"{/}
+	{if ($this->rawValue)} value="{rawValue}"{/}
+	{if (isset($this->validate))} validate="{validate}"{/}
+	/>
