--- a/templates/Userinput/Type/file.html
+++ b/templates/Userinput/Type/file.html
@@ -1,8 +1,6 @@
-{#/Userinput/validate}
-
-{?input.rawValue}
+{if ($this->input->rawValue)}
 	{!-- all files are images --}
-	<img src="{input.options.path}{input.rawValue}" id="current-{input.source.key}" class="user-upload" />
+	<img src="{input->options->path}{input->rawValue}" id="current-{input->source['key']}" class="user-upload" />
 {/}
 
-<input class="{?input.required}required {/}{input.state}" type="{input.inputType}" name="{input.source.key}" id="{input.source.key}"{html} />
+<input class="{?input->required}required {/}{input->state}" type="{input->inputType}" name="{input->source['key']}" id="{input->source->key}" />
