--- a/templates/Userinput/Type/textarea.html
+++ b/templates/Userinput/Type/textarea.html
@@ -1,3 +1,6 @@
-{#/Userinput/validate}
-
-<textarea class="{?input.required}required {/}{input.state}" name="{input.source.key}{?input.valueType=="array"}[]{/}" id="{input.source.key}" rows="5" cols="25"{html}>{input.rawValue}</textarea>
+<textarea
+	 class="{if ($this->input->required)}required {/}{input->state}"
+	 name="{input->source['key']}{if ('array' == input->valueType}[]{/}"
+	 id="{input->source['key']}"
+	 rows="5"
+	 cols="25">{input->rawValue}</textarea>
