--- a/templates/Userinput/validate.html
+++ b/templates/Userinput/validate.html
@@ -1,25 +1,24 @@
-{h=$html}{h/}
+{unset($this->validate);}
 
-{nh?input.inputType!="hidden"}
-	{ir?!input.regexp}
-		{!-- convert types to regexp for clientside validation --}
-		{=$length}{/}
+{if ($this->input->inputType == "hidden")}
+	{return;}
+{/}
 
-		{?input.options.minlength}
-			{l=$length}{{input.options.minlength},{l/}
-		{:}
-			{l=$length}{1,{l/}
-		{/}
+{if (!isset($this->input->regexp))}
+	{if (isset($this->input->options->minlength))}
+		{$this->len = '{'. $this->input->options->minlength;}
+	{:}
+		{$this->len = '{1,';}
+	{/}
 
-		{l=$length}{length}{input.options.maxlength}}{l/}
+	{$this->len .= $this->input->options->maxlength .'}';}
 
-		{?input.valueType=="string"}
-			{h=$html} validate="~^.{length}$~m"{h/}
-		{/}
-		{?input.valueType=="numeric"}
-			{h=$html} validate="~^\d{length}$~"{h/}
-		{/}
-	{ir:}
-		{h=$html} validate="{input.regexp}"{h/}
-	{ir/}
-{nh/}
+	{if ($this->input->valueType == "string")}
+		{$this->validate = '~^.'. $this->len .'$~m';}
+	{/}
+	{if ($this->input->valueType == "numeric")}
+		{$this->validate = '~^\d'. $this->len .'$~';}
+	{/}
+{:}
+	{$this->validate = $this->input->regexp;}
+{/}
