Entity now compatible with Postgres and objects without id
exampleApplication/ - removed
Basic_Action
	- _handleLastModified will return now+cacheLength when
	  lastMod+cacheLength < now, default mod now from propery
	- removed support for hardcoded 'error_404' action, resolve now
	  throws Exception
Basic_Controller
	- catch Exception from resolve and forward to exception tpl
	- only show forms when contentType=html, list missing params
	  otherwise
	- redirect() now accepts $permanent flag
Basic_Entity
	- introduced _primary which replaces previously fixed 'id'
	- __construct is now private; simplifies lots of checks
	- relations are no longer fetched; instead let __get handle them
	- queries no longer use `table` (for pg); but getTable adds them
Basic_Exception
	- $code is now used as responseCode
	- changed created hierarchy; A_X_YExc now extends A_XExc instead
	  of A_X_Exc
Basic_Userinput
	- deprecated asArray; removed REQUEST_METHOD check
Basic_UserinputValue
	- replaced getRawValue with _rawValue =& in construct
	- isPresent no longer validates
	- getValue no longer accepts $simple
	- default is no longer validated
	- getValue throws Exception for invalid value instead of null
	- bugfix; options is now actually used
	- validate now supports multiple values; Exceptions are 404s
templates/*
	- fixed 2 typos

--- a/templates/exception.html
+++ b/templates/exception.html
@@ -10,5 +10,5 @@
 	<h2>Caused by:</h2>
 
 	{$this->exception = $this->exception->cause;}
-	{$this->showTemplate('exception');}
+	{$this->show('exception');}
 {/}
