--- a/templates/Userinput/Type/textarea.html
+++ b/templates/Userinput/Type/textarea.html
@@ -1,6 +1,6 @@
 <textarea
 	 class="{if ($this->input->required)}required {/}{input->state}"
-	 name="{input->source['key']}{if ('array' == input->valueType}[]{/}"
+	 name="{input->source['key']}{if ('array' == $this->input->valueType}[]{/}"
 	 id="{input->source['key']}"
 	 rows="5"
 	 cols="25">{input->rawValue}</textarea>
