--- a/templates/Userinput/Type/checkbox.html
+++ b/templates/Userinput/Type/checkbox.html
@@ -6,7 +6,7 @@
 	{/}
 
 	<input
-		class="{if ($this->input->required)}required {/}{input->state}"
+		class="{if ($this->input->required)}required {/}{state}"
 		type="{input->inputType}"
 		name="{input->source['key']}{if (input->valueType == "array"}[]{/}"
 		id="{input->source['key']}_{value}"
