Changes for postgresql in Entities
Basic_EntitySet
	- disable pagination for psql
	- add comment to explain $quick in getCount
	- attempt to fix pagination in psql anyway
Basic_Template
	- bugfix in if+if/else where first if was matched with else from
	  2nd statement leading to problems. We now replace the else separately
	- no longer replace $action everywhere; but only in simple echos
	- bugfix in if parsing; check for \n\1 to enforce equal indenting
exception.html
	- bugfix for non-Basic Exceptions

--- a/templates/exception.html
+++ b/templates/exception.html
@@ -1,3 +1,10 @@
+{if (!$this->exception instanceof Basic_Exception)}
+	<h1>Unexpected error</h1>
+	<p>{exception->getMessage()}</p>
+
+	{return;}
+{/}
+
 <h1>{exception->getMessage()}</h1>
 <i>{exception->name}</i>
 
