--- a/templates/Userinput/Form.html
+++ b/templates/Userinput/Form.html
@@ -1,6 +1,6 @@
 <form method="post" action="{formAction}" id="userinput"{if ($this->formContainsFile)} enctype="multipart/form-data"{/}{if ($this->hasBeenSubmitted)} class="submit-attempted"{/}>
 	<fieldset>
-		{foreach ($userinput as $this->input)}
+		{foreach (Basic::$userinput as $this->input)}
 			{input->getHtml()}
 		{/}
 
