implemented new $cache->get(var, $cb, $ttl) parameters
Basic, Basic_Config, Basic_Template - use new $cache->get syntax
Basic_Action
	- moved $userinput->run + getUserinputConfig to local code
	- moved templatesShown to Template
	- other properties are now protected
	- fixed time @ statistics (would always say 0)
Basic_Entity
	- performance-fix; don't call __isset for all _numerical
	  and _serialized properties; use property_exists instead
Basic_EntitySet
	- renamed count-$quick param to $executeCount
	- clone $this so we can order results
Basic_Exception - use new $template->hasShown()
Basic_Memcache
	- removed impossible get() params that were meant to be
	  equal to the Memcached class so we could be strict. This
	  doesn't seem to work however
	- implemented $ttl for $cache_cb
Basic_Template - add support for comments
Basic_Userinput - removed run() and asArray()
Basic_UserinputValue - call __set instead of ->; prevents overwriting
	protected properties with unverified data
*.html - fixes in ID attribute, were mostly using old tpl-syntax

--- a/templates/Userinput/Type/file.html
+++ b/templates/Userinput/Type/file.html
@@ -3,4 +3,4 @@
 	<img src="{input->options->path}{input->rawValue}" id="current-{input->source['key']}" class="user-upload" />
 {/}
 
-<input class="{?input->required}required {/}{state}" type="{input->inputType}" name="{input->source['key']}" id="{input->source->key}" />
+<input class="{?input->required}required {/}{state}" type="{input->inputType}" name="{input->source['key']}" id="{input->source['key']}" />
