--- a/templates/Userinput/Wrapper.html
+++ b/templates/Userinput/Wrapper.html
@@ -4,7 +4,7 @@
 
 {if ('hidden' != $this->input->inputType)}
 	<dt>
-		<label for="{input->source->key}" class="name">{input->name}</label>
+		<label for="{input->source['key']}" class="name">{input->name}</label>
 	</dt>
 	<dd>
 {/}
