--- a/templates/Userinput/Type/checkbox.html
+++ b/templates/Userinput/Type/checkbox.html
@@ -1,8 +1,8 @@
 {foreach ($this->input->values as $this->value => $this->description}
-	{if (is_array($this->input->rawValue))}
-		{$this->selected = in_array($this->value, $this->input->rawValue);}
+	{if (is_array($this->rawValue))}
+		{$this->selected = in_array($this->value, $this->rawValue);}
 	{:}
-		{$this->selected = ($this->value == $this->input->rawValue);}
+		{$this->selected = ($this->value == $this->rawValue);}
 	{/}
 
 	<input
