--- a/templates/Userinput/Type/file.html
+++ b/templates/Userinput/Type/file.html
@@ -1,6 +1,6 @@
-{if ($this->input->rawValue)}
+{if ($this->rawValue)}
 	{!-- all files are images --}
-	<img src="{input->options->path}{input->rawValue}" id="current-{input->source['key']}" class="user-upload" />
+	<img src="{input->options->path}{rawValue}" id="current-{input->source['key']}" class="user-upload" />
 {/}
 
 <input class="{?input->required}required {/}{state}" type="{input->inputType}" name="{input->source['key']}" id="{input->source['key']}" />
