--- a/templates/Userinput/Type/select.html
+++ b/templates/Userinput/Type/select.html
@@ -3,13 +3,13 @@
 		{if (is_array($this->description))}
 			<optgroup label="{value}">
 				{foreach ($this->description as $this->subValue => $this->subDescription)}
-					<option value="{subValue}"{if ($this->subValue == $this->input->rawValue)} selected="selected"{/}>
+					<option value="{subValue}"{if ($this->subValue == $this->rawValue)} selected="selected"{/}>
 						{subDescription}
 					</option>
 				{/}
 			</optgroup>
 		{:}
-			<option value="{value}"{if ($this->value == $this->input->rawValue)} selected="selected"{/}>
+			<option value="{value}"{if ($this->value == $this->rawValue)} selected="selected"{/}>
 				{description}
 			</option>
 		{/}
