--- a/templates/Userinput/Type/textarea.html
+++ b/templates/Userinput/Type/textarea.html
@@ -3,4 +3,4 @@
 	 name="{input->source['key']}{if ('array' == $this->input->valueType)}[]{/}"
 	 id="{input->source['key']}"
 	 rows="5"
-	 cols="25">{input->rawValue}</textarea>
+	 cols="25">{rawValue}</textarea>
