--- a/templates/Userinput/Type/text.html
+++ b/templates/Userinput/Type/text.html
@@ -24,7 +24,7 @@
 	 type="{input->inputType}"
 	 name="{input->source['key']}{if ("array" == $this->input->valueType)}[]{/}"
 	 id="{input->source['key']}"
-	{if ($this->input->options['maxLength'])} size="{input->options['maxLength']}" maxlength="{input->options['maxLength']}"{/}
+	{if ($this->input->options['maxLength'])} maxlength="{input->options['maxLength']}"{/}
 	{if ($this->input->options['placeholder'])} placeholder="{input->options['placeholder']}"{/}
 	{if ($this->rawValue)} value="{rawValue}"{/}
 	{if (isset($this->pattern))} pattern="{pattern}"{/}
