Template now escapes html by default
Basic - disable output-buffering in cli
Basic_Action - disable clear on debug-hr
Basic_DatabaseQuery - add $binds parameter to execute for explicit types
Basic_EntitySet - fix name of Exception, don't escape $property @ORDER BY
Basic_Template - perform htmlspecialchars on all output, add {* for html
*.html - whitespace & escaping fixes

--- a/templates/Userinput/Form.html
+++ b/templates/Userinput/Form.html
@@ -1,7 +1,7 @@
 <form method="post" action="{formAction}" id="userinput"{if ($this->formContainsFile)} enctype="multipart/form-data"{/}{if ($this->hasBeenSubmitted)} class="submit-attempted"{/}>
 	<fieldset>
 		{foreach (Basic::$userinput as $this->input)}
-			{input->getHtml()}
+			{*input->getHtml()}
 		{/}
 
 		<input type="submit" value="{formSubmit}" />
