--- a/templates/Userinput/Type/file.html
+++ b/templates/Userinput/Type/file.html
@@ -3,4 +3,9 @@
 	<img src="{input->options->path}{rawValue}" id="current-{input->source['key']}" class="user-upload" />
 {/}
 
-<input class="{?input->required}required {/}{state}" type="{input->inputType}" name="{input->source['key']}" id="{input->source['key']}" />
+<input
+	 class="{?input->required}required {/}{state}"
+	 type="{input->inputType}"
+	 name="{input->source['key']}"
+	 id="{input->source['key']}"
+	 />
