--- a/templates/Userinput/Type/textarea.html
+++ b/templates/Userinput/Type/textarea.html
@@ -1,6 +1,6 @@
 <textarea
 	 class="{if ($this->input->required)}required {/}{state}"
-	 name="{input->source['key']}{if ('array' == $this->input->valueType)}[]{/}"
+	 name="{input->source['key']}{if ($this->input->options['multiple'])}[]{/}"
 	 id="{input->source['key']}"
 	 rows="5"
 	 cols="25">{rawValue}</textarea>
