--- a/templates/Userinput/Form.html
+++ b/templates/Userinput/Form.html
@@ -1,4 +1,4 @@
-<form method="post" action="{formAction}" id="userinput"{if ($this->formContainsFile)} enctype="multipart/form-data"{/}{if ($this->hasBeenSubmitted)} class="submit-attempted"{/}>
+<form method="post" action="{formAction}" id="{print str_replace('/', '', $this->formAction);}Form"{if ($this->formContainsFile)} enctype="multipart/form-data"{/}{if ($this->hasBeenSubmitted)} class="submit-attempted"{/}>
 	<fieldset>
 		{foreach (Basic::$userinput as $this->input)}
 			{*input->getHtml()}
