Tweak entity caching, make <option> value optional
Entity
	- cache only objects with an actual data
	- support create() without reloading from database
EntitySet - add support for alternative types of JOINs
select.html - only add value attribute when it is different from content

--- a/templates/Userinput/Type/select.html
+++ b/templates/Userinput/Type/select.html
@@ -5,13 +5,11 @@
 				{foreach ($this->description as $this->subValue => $this->subDescription)}
 					<option value="{subValue}"{if ($this->subValue == $this->rawValue)} selected="selected"{/}>
 						{subDescription}
-					</option>
 				{/}
 			</optgroup>
 		{:}
-			<option value="{value}"{if ($this->value == $this->rawValue)} selected="selected"{/}>
+			<option{if ($this->value != $this->description)} value="{value}"{/}{if ($this->value == $this->rawValue)} selected="selected"{/}>
 				{description}
-			</option>
 		{/}
 	{/}
 </select>
