--- a/templates/Userinput/Form.html
+++ b/templates/Userinput/Form.html
@@ -4,6 +4,6 @@
 			{*input->getHtml()}
 		{/}
 
-		<input type="submit" value="{formSubmit}" />
+		<input type="submit" value="submit" />
 	</fieldset>
 </form>
