--- a/templates/exception.html
+++ b/templates/exception.html
@@ -1,11 +1,14 @@
 {if (!$this->exception instanceof Basic_Exception)}
-	<h1>Unexpected error</h1>
+	<h2>Unexpected exception</h2>
 	<p>{exception->getMessage()}</p>
 
 	{return;}
 {/}
 
-<h1>{exception->getMessage()}</h1>
+<h2>This is an error {exception->code}</h2>
+{if ($this->exception instanceof Basic_DatabaseQueryException)}
+	<pre>{exception->getMessage()}</pre>
+{/}
 <i>{exception->name}</i>
 
 {if ($this->exception->trace)}
