Move processing of userinputConfig to Action::init
Basic_Action - implement processing of uiConfig so APP has chance to overload
Basic_Controller
	- replace userinput->init call with direct foreach
	- remove processing of uiConfig
Basic_Entity - 2 Log updates, write when setUserinputDefault fails
Basic_Userinput
	- remove init(), add 2 fixmes
	- implement getHtmlFor; used to explicitly render a form
	- implement toArray; returns simple array with name=>values
checkbox - fix typo; use correct variable for determining selected

--- a/templates/Userinput/Type/checkbox.html
+++ b/templates/Userinput/Type/checkbox.html
@@ -1,8 +1,8 @@
 {foreach ($this->input->values as $this->value => $this->description)}
 	{if (is_array($this->rawValue))}
-		{$this->selected = in_array($this->value, $this->rawValue);}
+		{$this->isSelected = in_array($this->value, $this->rawValue);}
 	{:}
-		{$this->selected = ($this->value == $this->rawValue);}
+		{$this->isSelected = ($this->value == $this->rawValue);}
 	{/}
 
 	<input
