Fix query::execute with boolean parameters
Basic_DatabaseQuery
	- rewrite execute() binding logic to use gettype
	- use bindValue instead of bindParam
Basic_Log - use REQUEST_TIME instead of construction startTime
exception.html - for PhpExceptions; always include getMessage

--- a/templates/exception.html
+++ b/templates/exception.html
@@ -9,7 +9,11 @@
 {if ($this->exception instanceof Basic_DatabaseQueryException)}
 	<pre>{exception->getMessage()}</pre>
 {/}
-<i>{exception->name}</i>
+{if ($this->exception instanceof Basic_PhpException)}
+	<p>{exception->getMessage()}</p>
+{:}
+	<i>{exception->name}</i>
+{/}
 
 {if ($this->exception->trace)}
 	<pre>{exception->trace}</pre>
