Introduce Action::getRoute and use it for formAction
cli - chdir to __DIR__ when APPLICATION_PATH is undefined
Action - introduce getRoute and add return-typehints
Exception - fix typo in message
Userinput
	- use new getRoute for formAction, removes need for actionPath in getHtmlFor
	- use ::class instead of $action for tpl/Userinput paths
exception - simplify

--- a/templates/exception.html
+++ b/templates/exception.html
@@ -5,15 +5,11 @@
 	{return;}
 {/}
 
-<h2>This is an error {exception->code}</h2>
+<h2 title="{exception->name}">This is an error {exception->code}</h2>
 {if ($this->exception instanceof Basic_DatabaseQueryException)}
 	<pre>{exception->getMessage()}</pre>
 {/}
-{if ($this->exception instanceof Basic_PhpException)}
-	<p>{exception->getMessage()}</p>
-{:}
-	<i>{exception->name}</i>
-{/}
+<p>{exception->getMessage()}</p>
 
 {if ($this->exception->trace)}
 	<pre>{exception->trace}</pre>
