--- a/templates/Userinput/Type/text.html
+++ b/templates/Userinput/Type/text.html
@@ -1,13 +1,13 @@
 {unset($this->pattern);}
 
 {if (!isset($this->input->regexp))}
-	{if (isset($this->input->options['minLength']))}
-		{$this->len = chr(123). $this->input->options['minLength'];}
+	{if (isset($this->input->minLength))}
+		{$this->len = chr(123). $this->input->minLength;}
 	{:}
 		{$this->len = chr(123). '1,';}
 	{/}
 
-	{$this->len .= $this->input->options['maxLength'] .chr(125);}
+	{$this->len .= $this->input->maxLength .chr(125);}
 
 	{if ($this->input->valueType == "string")}
 		{$this->pattern = '~^.'. $this->len .'$~m';}
@@ -24,7 +24,7 @@
 	 type="{input->inputType}"
 	 name="{input->source['key']}{if ($this->input->options['multiple'])}[]{/}"
 	 id="{input->source['key']}"
-	{if ($this->input->options['maxLength'])} maxlength="{input->options['maxLength']}"{/}
+	{if ($this->input->maxLength)} maxlength="{input->maxLength}"{/}
 	{if ($this->input->options['placeholder'])} placeholder="{input->options['placeholder']}"{/}
 	{if ($this->rawValue)} value="{rawValue}"{/}
 	{if (isset($this->pattern))} pattern="{pattern}"{/}
