--- a/templates/Userinput/Type/text.html
+++ b/templates/Userinput/Type/text.html
@@ -22,11 +22,11 @@
 <input
 	 class="{if ($this->input->required)}required {/}{state}"
 	 type="{input->inputType}"
-	 name="{input->source['key']}{if ($this->input->options['multiple'])}[]{/}"
+	 name="{input->source['key']}{if ($this->input->options['multiple']??0)}[]{/}"
 	 id="{input->source['key']}"
-	{if ($this->input->maxLength)} maxlength="{input->maxLength}"{/}
-	{if ($this->input->options['placeholder'])} placeholder="{input->options['placeholder']}"{/}
-	{if ($this->input->options['aria-label'])} aria-label="{input->options['aria-label']}"{/}
-	{if ($this->rawValue)} value="{rawValue}"{/}
+	{if (isset($this->input->maxLength))} maxlength="{input->maxLength}"{/}
+	{if (isset($this->input->options['placeholder']))} placeholder="{input->options['placeholder']}"{/}
+	{if (isset($this->input->options['aria-label']))} aria-label="{input->options['aria-label']}"{/}
+	{if (isset($this->rawValue))} value="{rawValue}"{/}
 	{if (isset($this->pattern))} pattern="{pattern}"{/}
 	 />
